# sdl-utils

./: CMakeLists.txt  LICENSE  README.md
Include/: StringUtil.h
Include/sdl-utils/: NumUtil.h  StringUtil.h  Types.h
Source/: SDLUtils.cpp
